<resources>
    <string name="app_name">Tax Mate</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_tax_regime">Select Tax Regime:</string>
    <string name="new_tax_regime_info">The new tax regime was introduced in Budget 2020 wherein the tax slabs were altered, and taxpayers were offered concessional tax rates. However, those who opt for the new regime cannot claim several exemptions and deductions, such as HRA, LTA, 80C, 80D , and more.</string>
    <string name="old_regime">Old Regime</string>
    <string name="new_regime">New Regime</string>
    <string name="choose_your_age_group">Choose your Age Group:</string>
    <string name="seniors_benefits_old_regime">Senior citizens may get certain tax benefits in the old regime.</string>
    <string name="_60_or_less">60 or less</string>
    <string name="_60_80_years">60 – 80 years</string>
    <string name="_80_or_above">80 or above</string>
    <string name="employment_type">Choose your employment type:</string>
    <string name="salaried_pensioners_benefits">Salaried individuals and pensioners enjoy certain standard deductions in tax payments.</string>
    <string name="salaried">Salaried</string>
    <string name="pensioners">Pensioners</string>
    <string name="other">Other</string>
    <string name="continue_text">Continue</string>
    <string name="tax_calculator">Tax Calculator</string>
    <string name="home_message">Simplify your taxes with our two powerful features:\n\nTax Calculator: Quickly and accurately calculate your income tax liability for the current financial year. Get instant results based on your income, deductions, and investments.\n\nTax Planner: Plan your taxes strategically for the year ahead. Explore various investment options and tax-saving strategies to minimize your tax burden and maximize your savings.\n\nThe Indian tax system is progressive, meaning higher income earners pay a higher percentage of tax. Various deductions and exemptions are available to help you reduce your tax liability. Our app helps you navigate these complexities and make informed decisions about your taxes.\n\nChoose your path and take control of your taxes today!</string>
    <string name="tax_calculation">Tax Calculation</string>
    <string name="tax_planning">Tax Planning</string>
    <string name="languages">Languages</string>
    <string name="faq_contact_us">FAQ / Contact Us</string>
    <string name="annual_income">Annual Income</string>
    <string name="payable_tax">Payable Tax</string>
    <string name="digital_assets_income">Digital Assets Income</string>
    <string name="deductible_interest_income">Deductible Interest Income</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="tax_rebate">Tax Rebate</string>
    <string name="standard_deduction">Standard Deduction</string>
    <string name="tax_payable">Tax Payable</string>
    <string name="total_tax">Total Tax</string>
    <string name="final_amount">Final amount</string>
    <string name="tax">Tax</string>
    <string name="deductions">Deductions</string>
    <string name="income_sources">Income Sources</string>
    <string name="investments_and_expenses_80c">Investments and Expenses (80C):</string>
    <string name="investments_made_in_equity_linked_saving_schemes_ppf_spf_rpf_payments_made_towards_life_insurance_premiums_principal_sum_of_a_home_loan_ssy_nsc_scss_etc">Investments made in Equity Linked Saving Schemes, PPF/SPF/RPF, payments made towards Life Insurance Premiums, principal sum of a home loan, SSY, NSC, SCSS, etc.</string>
    <string name="enter_investment_amount">Enter investment amount</string>
    <string name="medical_insurance_80d">Medical Insurance (80D):</string>
    <string name="medical_premium_amp_preventive_health_checkup_fees_paid_for_self_amp_family_including_parents"><![CDATA[Medical premium & preventive health checkup fees paid for self & family including parents]]></string>
    <string name="enter_medical_insurance_amount">Enter medical insurance amount</string>
    <string name="education_loan_80e">Education Loan (80E):</string>
    <string name="_80e_education_loan_deduction_is_a_tax_incentive_given_to_people_who_avail_education_loan_for_higher_studies_this_deduction_is_available_only_on_the_interest_amount_paid_on_the_loan_and_not_on_the_principal_amount">80E education loan deduction is a tax incentive given to people who avail education loan for higher studies. This deduction is available only on the interest amount paid on the loan and not on the principal amount.</string>
    <string name="enter_interest_amount">Enter interest amount</string>
    <string name="charity_donation_80g">Charity Donation (80G):</string>
    <string name="section_80g_of_the_indian_income_tax_act_allows_a_tax_deduction_for_contributions_to_certain_relief_funds_and_charitable_institutions">Section 80G of the Indian Income Tax Act allows a tax deduction for contributions to certain relief funds and charitable institutions.</string>
    <string name="enter_charity_donation_amount">Enter charity donation amount</string>
    <string name="national_pension_scheme_nps_80ccd">National Pension Scheme (NPS) (80CCD):</string>
    <string name="employee_s_contribution_to_nps_80ccd">Employee\'s contribution to NPS (80CCD):</string>
    <string name="includes_voluntary_contribution_to_national_pension_scheme_nps_under_section_80ccd_1_and_80ccd_1b">Includes voluntary contribution to National Pension Scheme (NPS) under section 80CCD(1) and 80CCD(1B)</string>
    <string name="enter_contribution_amount">Enter contribution amount</string>
    <string name="calculate">Calculate</string>
    <string name="enter_your_annual_income_salary">Enter your annual Income/Salary:</string>
    <string name="individuals_earning_higher_incomes_are_taxed_at_higher_rates_whereas_those_earning_less_than_a_certain_amount_are_exempt_from_it">Individuals earning higher incomes are taxed at higher rates whereas those earning less than a certain amount are exempt from it.</string>
    <string name="enter_your_salary">Enter your salary</string>
    <string name="enter_deductable_interest_income">Enter deductable interest income:</string>
    <string name="section_80tta_of_the_income_tax_act_1961_provides_a_deduction_of_up_to_rs_10_000_on_the_income_earned_from_interest_on_savings_made_in_a_bank_co_operative_society_or_post_office_there_is_no_deduction_for_interest_earned_from_fixed_deposits_an_recurring_deposits">Section 80TTA of the Income Tax Act, 1961 provides a deduction of up to Rs 10,000 on the income earned from interest on savings made in a bank, co-operative society or post office. There is no deduction for interest earned from fixed deposits an recurring deposits.</string>
    <string name="enter_your_deductions">Enter your deductions</string>
    <string name="income_from_digital_assets">Income from Digital Assets:</string>
    <string name="your_net_income_earned_from_digital_assets_taxed_at_30_this_includes_income_from_cryptocurrencies_nfts_stock_investments_and_other_digital_assets">Your net income earned from digital assets, taxed at 30%. This includes income from cryptocurrencies, NFTs, stock investments, and other digital assets.</string>
    <string name="enter_digital_assets_income">Enter digital assets income</string>
    <string name="common_continue">Continue</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="taxable_income">Taxable Income</string>
    <string name="additional_taxes">Additional Taxes</string>
    <string name="digital_assets_tax">Digital Assets Tax</string>
    <string name="health_and_education_cess">Health and Education Cess</string>
    <string name="can_save_you"> can save you up to %1$s in taxes.</string>
    <string name="basic_details">Basic Details</string>
    <string name="income_details">Income Details</string>
</resources>
