<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurfaceContainerLow"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/c_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/public_sans_semibold"
                android:text="@string/investments_and_expenses_80c"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/public_sans"
                android:text="@string/investments_made_in_equity_linked_saving_schemes_ppf_spf_rpf_payments_made_towards_life_insurance_premiums_principal_sum_of_a_home_loan_ssy_nsc_scss_etc"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/investment_input"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_investment_amount"
                app:prefixText="₹">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/investment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/d_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/public_sans_semibold"
                android:text="@string/medical_insurance_80d"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/public_sans"
                android:text="@string/medical_premium_amp_preventive_health_checkup_fees_paid_for_self_amp_family_including_parents"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medical_insurance_input"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_medical_insurance_amount"
                app:prefixText="₹">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medical_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/e_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_semibold"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/education_loan_80e"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/public_sans"
                android:text="@string/_80e_education_loan_deduction_is_a_tax_incentive_given_to_people_who_avail_education_loan_for_higher_studies_this_deduction_is_available_only_on_the_interest_amount_paid_on_the_loan_and_not_on_the_principal_amount"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/education_loan_input"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_interest_amount"
                app:prefixText="₹">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/education_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/g_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_semibold"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/charity_donation_80g"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/public_sans"
                android:text="@string/section_80g_of_the_indian_income_tax_act_allows_a_tax_deduction_for_contributions_to_certain_relief_funds_and_charitable_institutions"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/charity_donation_input"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_charity_donation_amount"
                app:prefixText="₹">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/charity_donation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/nps_employer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/public_sans_semibold"
                android:text="@string/employee_s_contribution_to_nps_80ccd"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/public_sans"
                android:text="@string/includes_voluntary_contribution_to_national_pension_scheme_nps_under_section_80ccd_1_and_80ccd_1b"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nps_input"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_contribution_amount"
                app:prefixText="₹">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nps_contribution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/public_sans_semibold"
            android:text="@string/calculate" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
