<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurfaceContainerLow"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/list_item_spacing_half">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans_semibold"
                android:text="@string/income_sources"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/income"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="@dimen/list_item_spacing_half"
                tools:itemCount="4"
                tools:listitem="@layout/fragment_tax_sheet_list_dialog_item" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans_semibold"
                android:text="@string/deductions"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deductions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="@dimen/list_item_spacing_half"
                tools:itemCount="4"
                tools:listitem="@layout/fragment_tax_sheet_list_dialog_item" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans_semibold"
                android:text="@string/tax"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="@dimen/list_item_spacing_half"
                tools:itemCount="4"
                tools:listitem="@layout/fragment_tax_sheet_list_dialog_item" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/public_sans_semibold"
                    android:text="@string/final_amount"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:textColor="?colorSecondary" />

                <TextView
                    android:id="@+id/payable_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textColor="?colorSecondary"
                    tools:text="₹29,500" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
